# orient-express

./: .dockerignore  .gitignore  Makefile  README.md  orient_express.py  pyproject.toml  requirements-dev.txt  setup.py  test_docker_image.ipynb  trt_benchmark_results.json  trt_benchmark_results_detection.json  trt_benchmark_results_detection_dynamic.json
.github/workflows/: workflow.yaml
docker-image-onnx/: Dockerfile  logging.conf  run_inference_server.py  test.py
docker-xgboost-scikit-learn/: Dockerfile  logging.conf  run_inference_server.py
experiments/: trt_latency_benchmark.py
orient_express/: __init__.py  deployment.py  model_wrapper.py  serving.py  sklearn_pipeline.py  vertex.py
orient_express/predictors/: __init__.py  classification.py  feature_extraction.py  instance_segmentation.py  loader.py  multi_label_classification.py  object_detection.py  predictor.py  runtime.py  semantic_segmentation.py  streaming.py  utils.py  vector_index.py
orient_express/utils/: colors.py  gs.py  image_processor.py  paths.py  retry.py
tests/: conftest.py  test_image_processor.py  test_model_wrapper.py  test_paths.py  test_predictors.py  test_registry.py  test_resize_masks.py  test_serving.py  test_sklearn_pipeline.py  test_vertex.py
tests/equivalence/: README.md  conftest.py  generate_goldens.py  harness.py  htmlreport.py  manifest.example.yaml  test_docker_equivalence.py  test_equivalence.py
tests/predictors/: conftest.py  test_classification.py  test_collate.py  test_fused_loading.py  test_instance_segmentation.py  test_multi_label_classification.py  test_object_detection.py  test_semantic_segmentation.py  test_stages.py  test_trt_cache_sync.py  test_vector_index.py
