[project]
name = "orient_express"
version = "2.4.2"
description = "A library to simplify model deployment to Vertex AI"
readme = "README.md"
authors = [
    { name = "Alexey Zankevich", email = "alex.zankevich@shiftsmart.com" },
    { name = "Ian Myers", email = "ian.myers@shiftsmart.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-cloud-aiplatform>=1.0,<2",
    "google-cloud-storage>=3.0,<4",
    "pandas>=2.0,<3",
    "pyyaml>=6.0,<7",
    "requests>=2.28",
    "joblib>=1.3",
    "numpy>=1.24,<3",
    "platformdirs>=4.0",
    "opencv-python-headless>=4.11.0,<5",
    "pillow>=10.0.1",
    "gcsfs>=2024.10.0",
    "scikit-learn>=1.5.0,<2",
    "xgboost>=2.0.0,<3",
    "tqdm>=4.67.1",
    "onnxruntime-gpu>=1.20,<2 ; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64')",
    "onnxruntime>=1.20,<2 ; sys_platform == 'darwin' or platform_machine == 'aarch64' or platform_machine == 'arm64' or (sys_platform == 'win32' and platform_machine == 'ARM64')",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
    "ipykernel>=7.2",
]
# The inference-server Docker images are not part of the published library;
# this group exists only for building those images.
server = [
    "kserve>=0.16,<0.17",
    "python-json-logger>=4.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orient_express"]

[tool.ruff]
line-length = 88
target-version = "py310"
# Notebooks are working documents (kept with outputs, edited ad hoc) —
# don't reformat or lint them.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", # pycodestyle errors
    "W",              # pycodestyle warnings
    "F",              # pyflakes
    "I",              # isort
    "B",              # bugbear (mutable defaults, footguns)
    "UP",             # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export the public API
"**/__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
