[project]
name = "orient_express"
version = "3.0.0"
description = "A library to simplify model deployment to Vertex AI"
readme = "README.md"
authors = [
    { name = "Alexey Zankevich", email = "alex.zankevich@shiftsmart.com" },
    { name = "Ian Myers", email = "ian.myers@shiftsmart.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-cloud-aiplatform>=1.0,<2",
    "google-cloud-storage>=3.0,<4",
    "pyyaml>=6.0,<7",
    "requests>=2.28",
    "joblib>=1.3",
    "numpy>=1.24,<3",
    "platformdirs>=4.0",
    "opencv-python-headless>=4.11.0,<5",
    "pillow>=10.0.1",
    "tqdm>=4.67.1",
    "onnxruntime-gpu>=1.20,<2 ; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64')",
    "onnxruntime>=1.20,<2 ; sys_platform == 'darwin' or platform_machine == 'aarch64' or platform_machine == 'arm64' or (sys_platform == 'win32' and platform_machine == 'ARM64')",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
    "ipykernel>=7.2",
    # test_vertex.py serializes a real sklearn model in upload_model_joblib tests
    "scikit-learn>=1.5.0,<2",
]
# The inference-server Docker images are not part of the published library;
# this group exists only for building those images. pandas, scikit-learn, and
# xgboost aren't imported by the library — the images need them to unpickle
# and run joblib model artifacts (and pandas for the sklearn server's
# DataFrame input). Serving versions must stay compatible with the versions
# models were trained with.
server = [
    "kserve>=0.16,<0.17",
    "python-json-logger>=4.0,<5",
    "pandas>=2.0,<3",
    "scikit-learn>=1.5.0,<2",
    "xgboost>=2.0.0,<3",
]

# kserve pins psutil<6, but psutil 5.x ships no Linux arm64 wheels, so local
# Docker builds on Apple Silicon fail compiling it from source. kserve's only
# psutil call (Process().cpu_affinity()) is unchanged in 6/7, so override.
[tool.uv]
override-dependencies = ["psutil>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orient_express"]

[tool.ruff]
line-length = 88
target-version = "py310"
# Notebooks are working documents (kept with outputs, edited ad hoc) —
# don't reformat or lint them.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", # pycodestyle errors
    "W",              # pycodestyle warnings
    "F",              # pyflakes
    "I",              # isort
    "B",              # bugbear (mutable defaults, footguns)
    "UP",             # pyupgrade
    "D",              # pydocstyle
]
ignore = ["D1"]  # don't require docstrings, only lint ones that exist

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export the public API
"**/__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
